only html for now

--- a/index.html
+++ b/index.html
@@ -4,11 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login Macario</title>
 </head>
 <body>
     
-   
+    <header>
+        <h1><a href="https://www.instagram.com/macarioshow/">MacarioShow<a></h1>
+        <nav></nav>
+    </header>
     
+    <section>
+        <div>
+            <a href="https://www.instagram.com/macarioshow/" target="_blank"><img src="assets/images/login-logo.png" alt="Logo de login qualquer"></a>
+        </div>
+
+        <form action="/login" method="POST">
+
+            <div>
+                <input type="email" placeholder="Digite seu e-mail" required>
+            </div>
+
+            <div>
+                <input type="password" placeholder="Digite sua senha" required>
+            </div>
+
+            <div>
+                <button>Enviar</button>
+            </div>
+
+
+
+        </form>
+
+    </section>
+
+    <footer>
+        <p>Telinha de Login de Caô</p>
+    </footer>
+
 </body>
 </html>
