--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     
     <header>
-        <h1><a href="https://www.instagram.com/macarioshow/">MacarioShow<a></h1>
+        <h1><a href="https://www.instagram.com/macarioshow/" target="_blank">MacarioShow<a></h1>
         <nav></nav>
     </header>
     
     <section class="content-center">
         <div class="text-center">
-            <a href="https://www.instagram.com/macarioshow/" target="_blank"><img src="assets/images/login-logo-2.png" alt="Logo de login qualquer"></a>
+            <a href="https://www.instagram.com/macarioshow/" target="_blank"><img src="assets/images/login-logo-3.png" alt="Logo de login qualquer"></a>
         </div>
 
         <form action="/login" method="POST">
