--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
         <form action="/login" method="POST">
 
             <div>
-                <input type="email" placeholder="Digite seu e-mail" required>
+                <input type="email" placeholder="Your e-mail" required>
             </div>
 
             <div>
-                <input type="password" placeholder="Digite sua senha" required>
+                <input type="password" placeholder="Password" required>
             </div>
 
             <div>
-                <button>Enviar</button>
+                <button>Send</button>
                 
             </div>
 
