--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Macario</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    
 
 </head>
 <body>
@@ -45,5 +46,6 @@
         <p>Telinha de Login de Caô</p>
     </footer>
 
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
