--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
     
     <section class="content-center">
         <div class="text-center">
-            <a href="https://www.instagram.com/macarioshow/" target="_blank"><img src="assets/images/login-logo-3.png" alt="Logo de login qualquer"></a>
+            <a href="https://www.google.com/" target="_blank"><img src="assets/images/login-logo-3.png" alt="Logo de login qualquer"></a>
         </div>
 
-        <form action="/login" method="POST">
+        <form action="/login" method="POST" id="form-login">
 
             <div>
-                <input type="email" placeholder="Your e-mail" required>
+                <input type="email" id="email" placeholder="Your e-mail" required>
             </div>
 
             <div>
-                <input type="password" placeholder="Password" required>
+                <input type="password" id= "password" placeholder="Password" required>
             </div>
 
             <div>
-                <button>Send</button>
+                <button id="btn-submit">Send</button>
                 
             </div>
 
