--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     
     <header>
-        <h1><a href="https://www.instagram.com/macarioshow/" target="_blank">MacarioShow<a></h1>
+        <h1><a href="https://www.instagram.com/macarioshow/" target="_blank">@macarioshow<a></h1>
         <nav></nav>
     </header>
     
     <section class="content-center">
         <div class="text-center">
-            <a href="https://www.google.com/" target="_blank"><img src="assets/images/login-logo-3.png" alt="Logo de login qualquer"></a>
+            <a href="https://www.google.com/" target="_blank"><img src="assets/images/login-logo-4.png" alt="Logo de login qualquer"></a>
         </div>
 
         <form action="/login" method="POST" id="form-login">
@@ -42,9 +42,6 @@
 
     </section>
 
-    <footer>
-        <p>Telinha de Login de Caô</p>
-    </footer>
 
     <script src="assets/js/script.js"></script>
 </body>
